added information from test api call

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,1 +1,7 @@
-<p>weather works!</p>
+<div>
+    <div>{{WeatherData.temp_celcius}}</div>
+    <div>{{WeatherData.temp_min}} / {{WeatherData.temp_max}}</div>
+    <div>Feels like: {{WeatherData.temp_feels_like}}</div>
+    <div>{{WeatherData.name}}</div>
+    <div>Humidity: {{WeatherData.main.humidity}}%</div>
+</div>
