--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,14 +1,14 @@
 header {
-  background-color: #2196f3;
+  background-color: transparent;
   padding: 15px;
 }
 
 a {
-  color: white;
+  color: balck;
   text-decoration: none;
   padding: 15px;
 }
 
 a:hover {
-  background-color: #2076c7;
+  background-color: grey;
 }
